--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="row">
+    <div class="col s12 m8 l4 offset-m2 offset-l4">
+        <div class="card">
+
+            <div class="card-action white-text" style="background-color: #e66c73;">
+                <h3 style="text-align: center;">LOGIN</h3>
+            </div>
+
+            <div class="card-content">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">account_circle</i>
+                    <input [(ngModel)]="usuario.nome" id="usuario" type="text" class="validate">
+                    <label class="active" for="usuario">Usuário</label>
+                </div><br>
+
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">lock_outline</i>
+                    <input [(ngModel)]="usuario.senha" id="senha" type="password" class="validate">
+                    <label class="active" for="senha">Senha</label>
+                </div><br>
+
+                <div class="form-field">
+                    <button class="btn-large" style="width:100%; background-color: #e66c73;" (click)="fazerLogin()">Login</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
