--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
         <div class="card">
 
             <div class="card-action white-text" style="background-color: #e66c73;">
-                <h3 style="text-align: center;">LOGIN</h3>
+                <h3 style="text-align: center;">Coder Clan</h3>
             </div>
 
             <div class="card-content">
@@ -20,7 +20,10 @@
                 </div><br>
 
                 <div class="form-field">
-                    <button class="btn-large" style="width:100%; background-color: #e66c73;" (click)="fazerLogin()">Login</button>
+
+                    <button class="btn-large" style="width:100%; background-color: #e66c73;" (click)="fazerLogin()">
+                      Login
+                    </button>
                 </div>
             </div>
 
