--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,9 @@
     background-color: red;
     border: 4px solid red !important;
 } */
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-image: url(assets/background.png);
+}
